--- a/saywhat/templates/index.html
+++ b/saywhat/templates/index.html
@@ -2,14 +2,16 @@
 
 {% block content %}
 <br><br><br>
+<h1 class="title">Posts</h1>
 <div class="is-flex is-align-items-center is-justify-content-center">
-    <div class="box">
-        <article class="content">
-            <p>
-                Hello there {{user.username}} <br>
-                <a href="{% url 'logout' %}">Log out</a>
-            </p>
-        </article>
-    </div>
+    {% for i in object_list %} 
+        <div class="card">
+            <div class="card-header">
+                <a href='{% url "detail" i.pk %}' class="card-header-title">{{i.title}}</a>
+            </div>
+        </div>
+    {% empty %} 
+        <p class="help">No posts  yet.</p>
+    {% endfor %}
 </div>
 {% endblock %}
