more css on the post viewing

--- a/saywhat/templates/post.html
+++ b/saywhat/templates/post.html
@@ -11,6 +11,10 @@
         <p class="is-family-sans-serif">
             {{post.body}}
         </p>
+        <hr>
+        <div class="is-flex is-align-items-center is-justify-content-center">
+            <a href="/" class="button is-primary">Go back</a>
+        </div>
     </div>
 </div>
 {% endblock %}
