--- a/saywhat/templates/post.html
+++ b/saywhat/templates/post.html
@@ -14,19 +14,38 @@
         </p>
         <hr>
         <br><br>
-        <!--
-
-            <div class="is-flex is-align-items-center is-justify-content-center">
-                <a href="/" class="button is-primary">Go back</a>
-                <form action="{% url 'like_post' post.pk %}" method="post">
-                    {% csrf_token %} 
-                    <button type="submit" class="button is-primary" name="post_id" value="{{post.id}}">Upvote</button>
-                </form>
-            </div>
-        -->
-        <div class="columns">
-            
+        <div class="is-flex is-align-items-center is-justify-content-center">
+            <a href="/" class="button is-primary">Go back</a>
+            <form action="{% url 'like_post' post.pk %}" method="post">
+                {% csrf_token %} 
+                <button type="submit" class="button is-primary" name="post_id" value="{{post.id}}">Upvote</button>
+            </form>
         </div>
+        <h1 class="subtitle">Comments:</h1>
+        <hr>
+        <h1 class="subtitle is-6">Add comment</h1>
+        <form action="{% url 'comment' post.pk %}" method="post">
+            {% csrf_token %} 
+            <textarea name="body" id="body" cols="30" rows="5" class="textarea"></textarea>
+            <button type="submit" name='post_id' value='{{post.id}}' class='button is-success'>Add comment</button>
+        </form>
+        <hr>
+        {% if post.comments.all %} 
+            {% for i in post.comments.all %} 
+                <div class="card">
+                    <div class="card-content">
+                        <div class="content">
+                            <p>
+                                {{i.body}} - {{i.name}}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <br><br>
+            {% endfor %}
+        {% else %} 
+            <p class="help">No comments yet.</p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
