wiped database and did changed some html

--- a/saywhat/templates/index.html
+++ b/saywhat/templates/index.html
@@ -19,7 +19,7 @@
         </div>
         <br> <br>
     {% empty %} 
-        <p class="help">No posts yet</p>
+        <p class="is-small">No posts yet</p>
     {% endfor %}
 </div>
 {% endblock %}
