--- a/saywhat/templates/base.html
+++ b/saywhat/templates/base.html
@@ -8,10 +8,37 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 </head>
 <body>
-  <br>
-  <br><br>
-    {% block content %}
+	<nav class="navbar">
+		<div class="navbar-brand">
+			<a href="/" class="navbar-item">
+				Say WHAT!
+			</a>
+		</div>
+		<div class="navbar-start">
+			<a href='/' class="navbar-item">
+				Home
+			</a>
+		</div>
+		<div class="navbar-end">
+			<div class="navbar-item">
+				{% if user.is_authenticated %} 
+					<div class="buttons">
+						<a href="/account" class='button is-dark'>Account</a>
+					</div>
+				{% else %}
+					<div class="buttons">
+						<a href="/account/signup" class="button is-primary">
+							<strong>Sign up</strong>
+						</a>
+						<a href="/account/login" class='button is-light'>Login</a>
+					</div>
+				{% endif %}
+			</div>
+		</div>
+	</nav>
+	<br>
+	{% block content %}	
 
-    {% endblock %}
+	{% endblock %}
 </body>
 </html>                   
