fixed comments to work off of foreignkey

--- a/saywhat/templates/post.html
+++ b/saywhat/templates/post.html
@@ -61,7 +61,7 @@
                     <div class="card-content">
                         <div class="content">
                             <p>
-                                {{i.body}} - {{i.name}}
+                                {{i.body}} - {{i.user.username}}
                             </p>
                         </div>
                     </div>
