--- a/saywhat/templates/base.html
+++ b/saywhat/templates/base.html
@@ -11,7 +11,7 @@
 	<nav class="navbar">
 		<div class="navbar-brand">
 			<a href="/" class="navbar-item">
-				Say WHAT!
+				<h1 class="title">Say WHAT!</h1>
 			</a>
 		</div>
 		<div class="navbar-start">
