--- a/saywhat/templates/post.html
+++ b/saywhat/templates/post.html
@@ -17,28 +17,30 @@
         <div class="is-flex is-align-items-center is-justify-content-center">
             <a href="/" class="button is-primary">Go back</a>
             <hr>
-            {% if user.is_authenticated %} 
-                {% if liked %} 
-                    <form action="{% url 'like_post' post.pk %}" method="post">
-                        {% csrf_token %} 
-                        <button type="submit" class="button is-danger" name="post_id" value="{{post.id}}">Remove upvote</button>
-                    </form>
-                {% else %} 
-                    <form action="{% url 'like_post' post.pk %}" method="post">
-                        {% csrf_token %} 
-                        <button type="submit" class="button is-primary" name="post_id" value="{{post.id}}">Upvote</button>
-                    </form>
-                {% endif %}
-            {% else %}
-            <button class="button is-disabled" disabled>Upvote</button>
-            <p>Sign up, or log in to upvote</p>
-            {% endif %} 
+            <div class="buttons">
+                {% if user.is_authenticated %} 
+                    {% if liked %} 
+                        <form action="{% url 'like_post' post.pk %}" method="post">
+                            {% csrf_token %} 
+                            <button type="submit" class="button is-danger" name="post_id" value="{{post.id}}">Remove upvote</button>
+                        </form>
+                    {% else %} 
+                        <form action="{% url 'like_post' post.pk %}" method="post">
+                            {% csrf_token %} 
+                            <button type="submit" class="button is-primary" name="post_id" value="{{post.id}}">Upvote</button>
+                        </form>
+                    {% endif %}
+                {% else %}
+                    <button class="button is-disabled" disabled>Upvote</button>
+                    <p>Sign up, or log in to upvote</p>
+                {% endif %} 
 
-            {% if user == post.op %} 
-                <br>
-                <a href="{% url 'edit' post.pk %}" class='button is-warning'>Edit post</a>
-                <a href="{% url 'delete' post.pk %}" class='button is-danger'>Delete post</a>
-            {% endif %}
+                {% if user == post.op %} 
+                    <br>
+                    <a href="{% url 'edit' post.pk %}" class='button is-warning'>Edit post</a>
+                    <a href="{% url 'delete' post.pk %}" class='button is-danger'>Delete post</a>
+                {% endif %}
+            </div>
         </div>
         <h1 class="subtitle">Comments:</h1>
         <hr>
